frontend: better internal scrollbars, close #31; various css fixes

--- a/frontend/src/components/Footer/index.scss
+++ b/frontend/src/components/Footer/index.scss
@@ -64,8 +64,6 @@
     }
 
     .TrackArtists {
-      display: flex;
-      flex-flow: row nowrap;
       align-items: center;
 
       .TrackArtist,
