--- a/frontend/src/components/Header/index.scss
+++ b/frontend/src/components/Header/index.scss
@@ -1,6 +1,10 @@
 .Header {
   margin-bottom: 15px;
   width: 100%;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 100;
 
   a {
     color: inherit;
