--- a/frontend/src/components/ReleaseList/index.scss
+++ b/frontend/src/components/ReleaseList/index.scss
@@ -113,8 +113,7 @@
       margin: 0 auto 15px auto;
     }
 
-    .Releases {
-      margin-top: -10px;
+    .ReleasesWrapper {
       flex-grow: 1;
     }
 
